# fin-notebook-agent

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  Dockerfile  README.md  chat_sessions.db  debug_banking.py  debug_question4.py  debug_react_only.py  main.py  pyproject.toml
.github/workflows/: ci.yml
.vectorstore/: chroma.sqlite3
app/api/: routes.py
app/api/v1/: chat.py
app/core/: config.py
app/db/: database.py  models.py  session.py
app/engine/: agent.py  agent_factory.py  dynamic_agent.py  prompts.py  react_agent.py  runner.py  tools.py
app/engine/graph/: graph.py  nodes.py  router.py  state.py
app/index/: document_loader.py  vector_store.py
app/models/: schemas.py
docs/: README_FULL.md
models/vectorstores/: chroma.sqlite3
output/: eval_results_sprint12.csv  eval_results_sprint12.json
scripts/: evaluate.py  ingest.py
streamlit_app/: main.py
tests/: eval_dataset.json  eval_dataset_grounded.json  test_main.py
