[tool.poetry]
package-mode = false
name = "fin-notebook-agent"
version = "0.1.0"
description = "Agentic RAG assistant for banking documentation, inspired by NotebookLM"
authors = ["David Llorente"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
python-dotenv = "^1.2.2"
pydantic-settings = "^2.13.1"
langchain = "^1.2.15"
langchain-community = "^0.4.1"
langchain-core = "^1.2.28"
langchain-openai = "^1.1.12"
langchain-text-splitters = "^1.1.1"
langgraph = "^1.1.6"
pypdf = "^6.9.2"
fastapi = "^0.135.3"
uvicorn = "^0.44.0"
streamlit = "^1.56.0"
duckduckgo-search = "^8.1.1"
ddgs = "^9.13.0"
onnxruntime = ">=1.19.2,<1.24.0"
langchain-chroma = "^1.1.0"
protobuf = ">=4.21.0,<5.0.0"
opentelemetry-exporter-otlp-proto-grpc = "<1.20.0"

[tool.poetry.group.dev.dependencies]
pytest = "^9.0.3"
black = "^26.3.1"
ruff = "^0.15.10"

[tool.black]
line-length = 120
target-version = ["py311"]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"